fix: removed auto overflow for headings

--- a/src/components/Heading.module.css
+++ b/src/components/Heading.module.css
@@ -58,7 +58,6 @@
     font-size: inherit;
     line-height: inherit;
     font-weight: inherit;
-    overflow: auto;
   }
 }
 
